[package]
name = "secpath-radar"
version = "0.4.9"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
feed-rs = "2"
minijinja = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
